dataset1235/2025-2/1955397009/users/209087680/executions/1107611404_2667036473.log
== RUN (2025-08-19 12:17:28)
-- CODE: 
c= float(input("Insira uma temperatura em celsius: "))
k=print(c+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Insira uma temperatura em celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Insira uma temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Insira uma temperatura em celsius: 233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Insira uma temperatura em celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Insira uma temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Insira uma temperatura em celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 12:33:02)
-- CODE: 
k=c=273.15
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
None
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
None
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
None
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
None
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
None
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 12:35:30)
-- CODE: 
c=30.5
k=c+273.15
print(k)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
303.65
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
303.65
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
303.65
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
303.65
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
303.65
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
303.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 12:33:37)
-- CODE: 
k=c+273.15
k=3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 12:33:59)
-- CODE: 
k=c+273.15
k=3
print(k)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 12:54:42)
-- CODE: 
3<2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
None
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
None
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
None
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
None
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
None
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 12:34:21)
-- CODE: 
k=c+273.15
c=3
print(k)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 13:54:57)
-- CODE: 
c= float(input("Insira uma temperatura em celsius: "))
k=print(c+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Insira uma temperatura em celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Insira uma temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Insira uma temperatura em celsius: 233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Insira uma temperatura em celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Insira uma temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Insira uma temperatura em celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 13:54:47)
-- CODE: 
c= float(input("Insira uma temperatura em celsius"))
k=print(c+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Insira uma temperatura em celsius293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Insira uma temperatura em celsius263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Insira uma temperatura em celsius233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Insira uma temperatura em celsius373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Insira uma temperatura em celsius273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Insira uma temperatura em celsius303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 12:34:26)
-- CODE: 
k=c+273.15
c=3
print(k)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:17:09)
-- CODE: 
c= float(input("Insira uma temperatura em celsius: "))
k=print(c+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Insira uma temperatura em celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Insira uma temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Insira uma temperatura em celsius: 233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Insira uma temperatura em celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Insira uma temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Insira uma temperatura em celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 12:34:44)
-- CODE: 
c=3
k=c+273.15
print(k)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
276.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
276.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
276.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
276.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
276.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
276.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 13:55:12)
-- CODE: 
c= float(input("Insira uma temperatura em celsius: "))
k=print(c+273.15)
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Insira uma temperatura em celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Insira uma temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Insira uma temperatura em celsius: 233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Insira uma temperatura em celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Insira uma temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Insira uma temperatura em celsius: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 12:34:12)
-- CODE: 
k=c+273.15
C=3
print(k)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 13:53:43)
-- CODE: 
c= float(input("Insira uma temperatura em celsius"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Insira uma temperatura em celsius
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Insira uma temperatura em celsius
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Insira uma temperatura em celsius
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Insira uma temperatura em celsius
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Insira uma temperatura em celsius
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Insira uma temperatura em celsius
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 13:55:05)
-- CODE: 
c= float(input("Insira uma temperatura em celsius: "))
k=print(c+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Insira uma temperatura em celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Insira uma temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Insira uma temperatura em celsius: 233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Insira uma temperatura em celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Insira uma temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Insira uma temperatura em celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 12:35:27)
-- CODE: 
c=30.5
k=c+273.15
print(k)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
303.65
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
303.65
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
303.65
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
303.65
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
303.65
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 12:55:00)
-- CODE: 
print(3<2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
False
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
False
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
False
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
False
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
False
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:17:51)
-- CODE: 
c= float(input("Insira uma temperatura em celsius: "))
k=print(c+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Insira uma temperatura em celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Insira uma temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Insira uma temperatura em celsius: 233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Insira uma temperatura em celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Insira uma temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Insira uma temperatura em celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 12:34:46)
-- CODE: 
c=3
k=c+273.15
print(k)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
276.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
276.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
276.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
276.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
276.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
276.15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 12:34:09)
-- CODE: 
k=c+273.15
C=3
print(k)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 12:34:22)
-- CODE: 
k=c+273.15
c=3
print(k)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    k=c+273.15
      ^
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
